// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FINISH_LOADING should loaded data for the given image 1`] = `
Object {
  "cr": Object {
    "images": Object {
      "byUuid": Object {
        "0db0937d-2ee2-4fce-a78f-17adbfdb2fbe": Object {
          "another": "different value",
          "some": "value",
          "status": "LOADED",
        },
      },
    },
  },
}
`;

exports[`The reducer should create a valid initial state 1`] = `
Object {
  "cr": Object {
    "images": Object {
      "byUuid": Object {},
    },
  },
}
`;
